force-app/main/default/objects/Email_Response__c/Email_Response__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Email Response</label>
</CustomObject>