force-app/main/default/objects/Email_Response__c/fields/DKS__c.field-meta.xml
<CustomField>
    <fullName>DKS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DKS</label>
    <type>Checkbox</type>
</CustomField>