force-app/main/default/objects/Email_Response__c/fields/Is_Enable__c.field-meta.xml
<CustomField>
    <fullName>Is_Enable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is not used.</description>
    <label>Is Enable</label>
    <type>Checkbox</type>
</CustomField>