force-app/main/default/objects/Email_Response__c/fields/TBL__c.field-meta.xml
<CustomField>
    <fullName>TBL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TBL</label>
    <type>Checkbox</type>
</CustomField>