force-app/main/default/objects/Email_Response__c/fields/VNS__c.field-meta.xml
<CustomField>
    <fullName>VNS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VNS</label>
    <type>Checkbox</type>
</CustomField>